Complete Swagger API docs
