# backend/internal/server/controllers/auth.go
@@ -8,11 +8,22 @@ import (
 	userrepo "github.com/hackfeed/remrratality/backend/internal/store/user_repo"
 )
 
+// SignUp godoc
+// @Summary Signing user up
+// @Description Signing user up by adding him to the database
+// @Tags auth
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} models.ResponseSuccessAuth
+// @Failure 400 {object} models.Response
+// @Failure 500 {object} models.Response
+// @Param request body models.User true "User's email and password"
+// @Router /auth/signup [post]
 func SignUp(c *gin.Context) {
 	userRepo, ok := c.MustGet("user_repo").(userrepo.UserRepository)
 	if !ok {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": "Failed to get user_repo",
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: "Failed to get user_repo",
 		})
 		return
 	}
@@ -21,49 +32,60 @@ func SignUp(c *gin.Context) {
 
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			"message": "Failed to parse request body",
+		c.AbortWithStatusJSON(http.StatusBadRequest, models.Response{
+			Message: "Failed to parse request body",
 		})
 		return
 	}
 
 	existingUser, _ := userRepo.GetUser(*req.Email)
 	if existingUser.Email != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			"message": "This email is already taken",
+		c.AbortWithStatusJSON(http.StatusBadRequest, models.Response{
+			Message: "This email is already taken",
 		})
 		return
 	}
 
 	user, err := userRepo.AddUser(*req.Email, *req.Password)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": err.Error(),
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: err.Error(),
 		})
 		return
 	}
 
 	expiresAt, err := user.GetExpirationTime()
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": "Failed to get token expiration time",
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: "Failed to get token expiration time",
 		})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"message":   "User created",
-		"idToken":   *user.Token,
-		"localId":   user.UserID,
-		"expiresAt": expiresAt,
+	c.JSON(http.StatusOK, models.ResponseSuccessAuth{
+		Message:   "User created",
+		IDToken:   *user.Token,
+		LocalID:   user.UserID,
+		ExpiresAt: expiresAt,
 	})
 }
 
+// Login godoc
+// @Summary Logging user in
+// @Description Logging user in by retrieving his data from the database
+// @Tags auth
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} models.ResponseSuccessAuth
+// @Failure 400 {object} models.Response
+// @Failure 500 {object} models.Response
+// @Param request body models.User true "User's email and password"
+// @Router /auth/login [post]
 func Login(c *gin.Context) {
 	userRepo, ok := c.MustGet("user_repo").(userrepo.UserRepository)
 	if !ok {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": "Failed to get user_repo",
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: "Failed to get user_repo",
 		})
 		return
 	}
@@ -72,32 +94,32 @@ func Login(c *gin.Context) {
 
 	err := c.ShouldBindJSON(&req)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{
-			"message": "Failed to parse request body",
+		c.AbortWithStatusJSON(http.StatusBadRequest, models.Response{
+			Message: "Failed to parse request body",
 		})
 		return
 	}
 
 	user, err := userRepo.GetUser(*req.Email)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": "User with given email doesn't exist",
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: "User with given email doesn't exist",
 		})
 		return
 	}
 
 	err = user.VerifyPassword(*req.Password)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": "Password is incorrect",
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: "Password is incorrect",
 		})
 		return
 	}
 
 	token, refreshToken, err := user.GenerateTokens()
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": "Failed to generate tokens",
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: "Failed to generate tokens",
 		})
 		return
 	}
@@ -107,24 +129,24 @@ func Login(c *gin.Context) {
 
 	err = userRepo.UpdateUser(user.UserID, user)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": "Failed to update user data",
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: "Failed to update user data",
 		})
 		return
 	}
 
 	expiresAt, err := user.GetExpirationTime()
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{
-			"message": "Failed to get token expiration time",
+		c.AbortWithStatusJSON(http.StatusInternalServerError, models.Response{
+			Message: "Failed to get token expiration time",
 		})
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"message":   "Login success",
-		"idToken":   *user.Token,
-		"localId":   user.UserID,
-		"expiresAt": expiresAt,
+	c.JSON(http.StatusOK, models.ResponseSuccessAuth{
+		Message:   "Login success",
+		IDToken:   *user.Token,
+		LocalID:   user.UserID,
+		ExpiresAt: expiresAt,
 	})
 }
