# backend/internal/server/models/user.go
@@ -1,6 +1,6 @@
 package models
 
 type User struct {
-	Email    *string `json:"email" validate:"email,required" binding:"required"`
-	Password *string `json:"password" validate:"required,min=6" binding:"required"`
+	Email    *string `json:"email" validate:"email,required" binding:"required" example:"test@test.com"`
+	Password *string `json:"password" validate:"required,min=6" binding:"required" example:"password123"`
 }
